pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidGlobImport2.pkl
import* "\\foo.pkl" as invalidGlob

res = invalidGlob
